[package]
name = "movierate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = "0.6.16"
axum-extra = { version = "0.7.4", features = ["form"] }
csv = "1.2.1"
maud = { version = "0.25.0", features = ["axum"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_with = "2.3.2"
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["fmt"] }
